--- a/style.css
+++ b/style.css
@@ -1,5 +1,35 @@
+* {
+  background-color: cornflowerblue;
+}
+
 .container__header {
   width: 100%;
-  height: 400px;
+  height: 200px;
   background-color: aqua;
+}
+
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+}
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 50%;
+}
+
+.container_sectionPromo {
+  display: flex;
+  width: 70%;
+  margin: 100px auto;
+  align-items: center;
+}
+
+.items-article {
+ width: 30%;
+ height: 100px;
+ background-color: aquamarine; 
 }
