--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-  background-color: cornflowerblue;
+  background-color: #ffff;
 }
 
 .container__header {
@@ -32,4 +32,27 @@
  width: 30%;
  height: 100px;
  background-color: aquamarine; 
+}
+
+.publish h3 {
+  font-family: "Alegreya", serif;
+  font-size: 40px;
+  line-height: 48px;
+  color: #025157;
+}
+
+.publish > p {
+  font-size: 16px;
+  color: #343434;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+.publish > form {
+  display: flex;
+}
+
+.publish > form p {
+  color: #025157;
+  margin-right: 18px;
 }
